# Licenscope

./: README.md  main.py  pyproject.toml  sonar-project.properties
.github/workflows/: release.yml  ruff.yml  semgrep.yml
licenscope/: __init__.py  app.py  cli.py
licenscope/auth/: __init__.py  base.py  basic.py  token.py
licenscope/config/: __init__.py  loader.py  schema.py
licenscope/core/: __init__.py  errors.py  models.py
licenscope/notifications/: __init__.py  base.py  opsgenie.py  pagerduty.py  registry.py  slack.py
licenscope/parsers/: __init__.py  base.py  jinja_parser.py  json_parser.py  regex_parser.py  registry.py
licenscope/sources/: __init__.py  base.py  certificate.py  file.py  url.py
licenscope/util/: datetime.py  http.py  logging.py
templates/: certificate.toml  cortex.toml  gitlab.toml  nexus.toml  sonarqube.toml
